update eth lock time

--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json && cp artifacts/contracts/test/MockToken.sol/MockToken.json packages/contract-abis/abis/ERC20.json",
     "cleanbuild": "hardhat clean && yarn build",
     "docgen": "solidity-docgen --solc-module solc -t ./templates",
-    "test": "TESTNET_MODE=true NETWORK_ID=ropsten yarn chain && hardhat --network hardhat test",
+    "test": "TESTNET_MODE=true NETWORK_ID=eth yarn chain && hardhat --network hardhat test",
     "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
     "estimate2": "hardhat --network hardhat run scripts/estimate-gas-upgradable.js",
 
     "chain": "node scripts/set-chain-config.js",
     "chain:local": "NETWORK_ID=local yarn chain",
-    "chain:eth": "NETWORK_ID=ropsten yarn chain",
+    "chain:eth": "NETWORK_ID=eth yarn chain",
     "chain:bnb": "NETWORK_ID=bnb yarn chain",
     "chain:avax": "NETWORK_ID=avax yarn chain",
     "chain:poly": "NETWORK_ID=polygon yarn chain",
@@ -27,7 +27,7 @@
     "chain:one": "NETWORK_ID=one yarn chain",
 
     "testnet": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/deploy-upgradable.js",
-    "testnet:eth": "NETWORK_ID=ropsten yarn testnet",
+    "testnet:eth": "NETWORK_ID=eth yarn testnet",
     "testnet:bnb": "NETWORK_ID=bnb yarn testnet",
     "testnet:avax": "NETWORK_ID=avax yarn testnet",
     "testnet:poly": "NETWORK_ID=polygon yarn testnet",
@@ -35,7 +35,7 @@
     "testnet:one": "NETWORK_ID=one yarn testnet",
 
     "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/upgrade.js",
-    "testnet-up:eth": "NETWORK_ID=ropsten yarn testnet-up",
+    "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
     "testnet-up:bnb": "NETWORK_ID=bnb yarn testnet-up",
     "testnet-up:avax": "NETWORK_ID=avax yarn testnet-up",
     "testnet-up:poly": "NETWORK_ID=polygon yarn testnet-up",
@@ -43,7 +43,7 @@
     "testnet-up:one": "NETWORK_ID=one yarn testnet-up",
 
     "deploy": "yarn chain && hardhat run scripts/mainnets/deploy-upgradable.js",
-    "deploy:eth": "HARDHAT_NETWORK=mainnet yarn deploy",
+    "deploy:eth": "HARDHAT_NETWORK=eth yarn deploy",
     "deploy:bnb": "HARDHAT_NETWORK=bnb yarn deploy",
     "deploy:avax": "HARDHAT_NETWORK=avax yarn deploy",
     "deploy:poly": "HARDHAT_NETWORK=polygon yarn deploy",
