--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -18,8 +18,8 @@
     "prepare": "yarn build"
   },
   "dependencies": {
-    "@ethersproject/contracts": "5.5.0",
-    "@ethersproject/providers": "5.5.0",
+    "@ethersproject/contracts": "^5.6.0",
+    "@ethersproject/providers": "^5.6.0",
     "@mesonfi/contract-abis": "^0.6.5",
     "@mesonfi/sdk": "^0.6.5"
   },
