--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chain:ftm": "NETWORK_ID=ftm yarn chain",
     "chain:cfx": "NETWORK_ID=cfx yarn chain",
     "chain:one": "NETWORK_ID=one yarn chain",
+    "chain:tron": "NETWORK_ID=tron yarn chain",
 
     "testnet": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/deploy-upgradable.js",
     "testnet:eth": "NETWORK_ID=eth yarn testnet",
@@ -35,6 +36,7 @@
     "testnet:ftm": "NETWORK_ID=ftm yarn testnet",
     "testnet:cfx": "NETWORK_ID=cfx yarn testnet",
     "testnet:one": "NETWORK_ID=one yarn testnet",
+    "testnet:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/deploy.js",
 
     "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/upgrade.js",
     "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
@@ -64,7 +66,8 @@
     "deposit": "hardhat run scripts/mainnets/deposit.js",
     "deposit:eth": "HARDHAT_NETWORK=eth yarn deposit",
     "deposit:bnb": "HARDHAT_NETWORK=bnb yarn deposit",
-    "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit"
+    "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
+    "deposit:tron": "hardhat run scripts/tron/deposit.js"
   },
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.6.5",
