--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -19,6 +19,7 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.6.0",
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/bytes": "^5.6.0",
     "@ethersproject/constants": "^5.6.0",
