--- a/packages/contract-types/package.json
+++ b/packages/contract-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/contract-types",
-  "version": "0.6.5",
+  "version": "0.7.0-rc.1",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
