--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 
     "deposit": "hardhat run scripts/mainnets/deposit.js",
     "deposit:eth": "HARDHAT_NETWORK=eth yarn deposit",
+    "deposit:avax": "HARDHAT_NETWORK=avax yarn deposit",
     "deposit:bnb": "HARDHAT_NETWORK=bnb yarn deposit",
     "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
     "deposit:tron": "hardhat run scripts/tron/deposit.js"
