--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -18,7 +18,10 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "@ethersproject/abstract-signer": "^5.6.0",
+    "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/contracts": "^5.6.0",
+    "@ethersproject/properties": "^5.6.0",
     "@ethersproject/providers": "^5.6.0",
     "@mesonfi/contract-abis": "^0.7.0-rc.1",
     "@mesonfi/sdk": "^0.7.0-rc.1",
