--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@ethersproject/abi": "^5.6.0",
+    "@ethersproject/address": "^5.6.0",
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/bytes": "^5.6.0",
     "@ethersproject/constants": "^5.6.0",
