--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "0.7.0-rc.2",
+  "version": "0.7.0",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -23,8 +23,8 @@
     "@ethersproject/contracts": "^5.6.0",
     "@ethersproject/properties": "^5.6.0",
     "@ethersproject/providers": "^5.6.0",
-    "@mesonfi/contract-abis": "^0.7.0-rc.1",
-    "@mesonfi/sdk": "^0.7.0-rc.2",
+    "@mesonfi/contract-abis": "^0.7.0",
+    "@mesonfi/sdk": "^0.7.0",
     "tronweb": "^4.1.0"
   },
   "devDependencies": {
