--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "chain:ftm": "NETWORK_ID=ftm yarn chain",
     "chain:cfx": "NETWORK_ID=cfx yarn chain",
     "chain:one": "NETWORK_ID=one yarn chain",
-    "chain:tron": "NETWORK_ID=tron yarn chain",
     "chain:aurora": "NETWORK_ID=aurora yarn chain",
     "chain:arbitrum": "NETWORK_ID=arbitrum yarn chain",
     "chain:optimistic": "NETWORK_ID=optimistic yarn chain",
     "chain:gnosis": "NETWORK_ID=gnosis yarn chain",
+    "chain:tron": "NETWORK_ID=tron yarn chain",
 
     "testnet": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/deploy-upgradable.js",
     "testnet:eth": "NETWORK_ID=eth yarn testnet",
@@ -40,11 +40,11 @@
     "testnet:ftm": "NETWORK_ID=ftm yarn testnet",
     "testnet:cfx": "NETWORK_ID=cfx yarn testnet",
     "testnet:one": "NETWORK_ID=one yarn testnet",
-    "testnet:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/deploy.js",
     "testnet:aurora": "NETWORK_ID=aurora yarn testnet",
     "testnet:arbitrum": "NETWORK_ID=arbitrum yarn testnet",
     "testnet:optimistic": "NETWORK_ID=optimistic yarn testnet",
     "testnet:gnosis":  "NETWORK_ID=gnosis yarn testnet",
+    "testnet:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/deploy.js",
     
     "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/upgrade.js",
     "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
@@ -54,6 +54,10 @@
     "testnet-up:ftm": "NETWORK_ID=ftm yarn testnet-up",
     "testnet-up:cfx": "NETWORK_ID=cfx yarn testnet-up",
     "testnet-up:one": "NETWORK_ID=one yarn testnet-up",
+    "testnet-up:aurora": "NETWORK_ID=aurora yarn testnet-up",
+    "testnet-up:arbitrum": "NETWORK_ID=arbitrum yarn testnet-up",
+    "testnet-up:optimistic": "NETWORK_ID=optimistic yarn testnet-up",
+    "testnet-up:gnosis": "NETWORK_ID=gnosis yarn testnet-up",
     "testnet-up:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/update.js",
     
     "deploy": "yarn chain && hardhat run scripts/mainnets/deploy-upgradable.js",
@@ -63,11 +67,11 @@
     "deploy:poly": "HARDHAT_NETWORK=polygon yarn deploy",
     "deploy:ftm": "HARDHAT_NETWORK=ftm yarn deploy",
     "deploy:cfx": "HARDHAT_NETWORK=cfx yarn deploy",
-    "deploy:tron": "NETWORK_ID=tron yarn chain && hardhat run scripts/tron/deploy.js",
     "deploy:aurora": "NETWORK_ID=aurora yarn deploy",
     "deploy:arbitrum": "NETWORK_ID=arbitrum yarn deploy",
     "deploy:gnosis": "NETWORK_ID=gnosis yarn deploy",
     "deploy:optimistic": "NETWORK_ID=optimistic yarn deploy",
+    "deploy:tron": "NETWORK_ID=tron yarn chain && hardhat run scripts/tron/deploy.js",
     
     "up": "yarn chain && hardhat run scripts/mainnets/upgrade.js",
     "up:eth": "HARDHAT_NETWORK=eth yarn up",
@@ -76,11 +80,11 @@
     "up:poly": "HARDHAT_NETWORK=polygon yarn up",
     "up:ftm": "HARDHAT_NETWORK=ftm yarn up",
     "up:cfx": "HARDHAT_NETWORK=cfx yarn up",
-    "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
     "up:aurora": "HARDHAT_NETWORK=aurora yarn up",
     "up:arbitrum": "HARDHAT_NETWORK=arbitrum yarn up",
     "up:gnosis": "HARDHAT_NETWORK=gnosis yarn up",
     "up:optimistic": "HARDHAT_NETWORK=optimistic yarn up",
+    "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
     
     "deposit": "hardhat run scripts/mainnets/deposit.js",
     "deposit:eth": "HARDHAT_NETWORK=eth yarn deposit",
