--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.7.0",
     "@mesonfi/contract-types": "^0.7.0",
-    "@mesonfi/presets": "^0.7.0",
+    "@mesonfi/presets": "^0.7.2-rc.1",
     "@mesonfi/sdk": "^0.7.1",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
