--- a/package.json
+++ b/package.json
@@ -100,8 +100,8 @@
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.7.0",
     "@mesonfi/contract-types": "^0.7.0",
-    "@mesonfi/presets": "^0.7.3",
-    "@mesonfi/sdk": "^0.7.1",
+    "@mesonfi/presets": "^0.8.0-rc.1",
+    "@mesonfi/sdk": "^0.8.0-rc.1",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.1",
