--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "0.7.3",
+  "version": "0.8.0-rc.1",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -24,7 +24,7 @@
     "@ethersproject/properties": "^5.6.0",
     "@ethersproject/providers": "^5.6.0",
     "@mesonfi/contract-abis": "^0.7.0",
-    "@mesonfi/sdk": "^0.7.1",
+    "@mesonfi/sdk": "^0.8.0-rc.1",
     "tronweb": "^4.1.0"
   },
   "devDependencies": {
