--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "deposit:eth": "HARDHAT_NETWORK=eth yarn deposit",
     "deposit:avax": "HARDHAT_NETWORK=avax yarn deposit",
     "deposit:poly": "HARDHAT_NETWORK=polygon yarn deposit",
+    "deposit:ftm": "HARDHAT_NETWORK=ftm yarn deposit",
     "deposit:bnb": "HARDHAT_NETWORK=bnb yarn deposit",
     "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
     "deposit:aurora": "HARDHAT_NETWORK=aurora yarn deposit",
