--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
 
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
+    "token:aurora": "HARDHAT_NETWORK=aurora yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
     
     "deposit": "hardhat run scripts/mainnets/deposit.js",
@@ -102,7 +103,7 @@
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.7.0",
     "@mesonfi/contract-types": "^0.7.0",
-    "@mesonfi/presets": "^0.8.0-rc.3",
+    "@mesonfi/presets": "^0.8.1",
     "@mesonfi/sdk": "^0.8.0-rc.1",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
