--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "chain:cfx": "NETWORK_ID=cfx yarn chain",
     "chain:one": "NETWORK_ID=one yarn chain",
     "chain:aurora": "NETWORK_ID=aurora yarn chain",
+    "chain:evmos": "NETWORK_ID=evmos && yarn chain",
     "chain:arbitrum": "NETWORK_ID=arbitrum yarn chain",
     "chain:optimistic": "NETWORK_ID=optimistic yarn chain",
     "chain:gnosis": "NETWORK_ID=gnosis yarn chain",
     "chain:tron": "NETWORK_ID=tron yarn chain",
-    "chain:evmos": "NETWORK_ID=evmos && yarn chain",
 
     "testnet": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/deploy-upgradable.js",
     "testnet:eth": "NETWORK_ID=eth yarn testnet",
@@ -42,11 +42,12 @@
     "testnet:cfx": "NETWORK_ID=cfx yarn testnet",
     "testnet:one": "NETWORK_ID=one yarn testnet",
     "testnet:aurora": "NETWORK_ID=aurora yarn testnet",
+    "testnet:evmos":  "NETWORK_ID=evmos yarn testnet",
     "testnet:arbitrum": "NETWORK_ID=arbitrum yarn testnet",
     "testnet:optimistic": "NETWORK_ID=optimistic yarn testnet",
     "testnet:gnosis":  "NETWORK_ID=gnosis yarn testnet",
     "testnet:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/deploy.js",
-    "testnet:evmos":  "NETWORK_ID=evmos yarn testnet",
+    
     "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/upgrade.js",
     "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
     "testnet-up:bnb": "NETWORK_ID=bnb yarn testnet-up",
@@ -56,6 +57,7 @@
     "testnet-up:cfx": "NETWORK_ID=cfx yarn testnet-up",
     "testnet-up:one": "NETWORK_ID=one yarn testnet-up",
     "testnet-up:aurora": "NETWORK_ID=aurora yarn testnet-up",
+    "testnet-up:evmos": "NETWORK_ID=evmos yarn testnet-up",
     "testnet-up:arbitrum": "NETWORK_ID=arbitrum yarn testnet-up",
     "testnet-up:optimistic": "NETWORK_ID=optimistic yarn testnet-up",
     "testnet-up:gnosis": "NETWORK_ID=gnosis yarn testnet-up",
@@ -69,6 +71,7 @@
     "deploy:ftm": "HARDHAT_NETWORK=ftm yarn deploy",
     "deploy:cfx": "HARDHAT_NETWORK=cfx yarn deploy",
     "deploy:aurora": "HARDHAT_NETWORK=aurora yarn deploy",
+    "deploy:evmos": "HARDHAT_NETWORK=evmos yarn deploy",
     "deploy:arbitrum": "HARDHAT_NETWORK=arbitrum yarn deploy",
     "deploy:gnosis": "HARDHAT_NETWORK=gnosis yarn deploy",
     "deploy:optimistic": "HARDHAT_NETWORK=optimistic yarn deploy",
@@ -82,6 +85,7 @@
     "up:ftm": "HARDHAT_NETWORK=ftm yarn up",
     "up:cfx-18": "HARDHAT_NETWORK=cfx yarn up",
     "up:aurora": "HARDHAT_NETWORK=aurora yarn up",
+    "up:evmos": "HARDHAT_NETWORK=evmos yarn up",
     "up:arbitrum": "HARDHAT_NETWORK=arbitrum yarn up",
     "up:gnosis": "HARDHAT_NETWORK=gnosis yarn up",
     "up:optimistic": "HARDHAT_NETWORK=optimistic yarn up",
@@ -99,6 +103,7 @@
     "deposit:bnb": "HARDHAT_NETWORK=bnb yarn deposit",
     "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
     "deposit:aurora": "HARDHAT_NETWORK=aurora yarn deposit",
+    "deposit:evmos": "HARDHAT_NETWORK=evmos yarn deposit",
     "deposit:tron": "hardhat run scripts/tron/deposit.js"
   },
   "devDependencies": {
