--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meson-contracts-solidity",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "main": "index.js",
   "private": true,
   "engines": {
@@ -108,10 +108,10 @@
     "deposit:tron": "hardhat run scripts/tron/deposit.js"
   },
   "devDependencies": {
-    "@mesonfi/contract-abis": "^0.7.0",
-    "@mesonfi/contract-types": "^0.7.0",
-    "@mesonfi/presets": "^0.8.3",
-    "@mesonfi/sdk": "^0.8.0-rc.1",
+    "@mesonfi/contract-abis": "^0.9.0",
+    "@mesonfi/contract-types": "^0.9.0",
+    "@mesonfi/presets": "^0.9.0",
+    "@mesonfi/sdk": "^0.9.0",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.1",
