--- a/package.json
+++ b/package.json
@@ -36,74 +36,73 @@
     "testnet": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/deploy-upgradable.js",
     "testnet:eth": "NETWORK_ID=eth yarn testnet",
     "testnet:bnb": "NETWORK_ID=bnb yarn testnet",
-    "testnet:avax": "NETWORK_ID=avax yarn testnet",
     "testnet:poly": "NETWORK_ID=polygon yarn testnet",
+    "testnet:avax": "NETWORK_ID=avax yarn testnet",
     "testnet:ftm": "NETWORK_ID=ftm yarn testnet",
     "testnet:cfx": "NETWORK_ID=cfx yarn testnet",
     "testnet:one": "NETWORK_ID=one yarn testnet",
     "testnet:aurora": "NETWORK_ID=aurora yarn testnet",
     "testnet:evmos":  "NETWORK_ID=evmos yarn testnet",
-    "testnet:arbitrum": "NETWORK_ID=arbitrum yarn testnet",
-    "testnet:optimistic": "NETWORK_ID=optimistic yarn testnet",
     "testnet:gnosis":  "NETWORK_ID=gnosis yarn testnet",
     "testnet:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/deploy.js",
-    
+
     "testnet-up": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/upgrade.js",
     "testnet-up:eth": "NETWORK_ID=eth yarn testnet-up",
     "testnet-up:bnb": "NETWORK_ID=bnb yarn testnet-up",
-    "testnet-up:avax": "NETWORK_ID=avax yarn testnet-up",
     "testnet-up:poly": "NETWORK_ID=polygon yarn testnet-up",
+    "testnet-up:avax": "NETWORK_ID=avax yarn testnet-up",
     "testnet-up:ftm": "NETWORK_ID=ftm yarn testnet-up",
     "testnet-up:cfx": "NETWORK_ID=cfx yarn testnet-up",
     "testnet-up:one": "NETWORK_ID=one yarn testnet-up",
     "testnet-up:aurora": "NETWORK_ID=aurora yarn testnet-up",
     "testnet-up:evmos": "NETWORK_ID=evmos yarn testnet-up",
-    "testnet-up:arbitrum": "NETWORK_ID=arbitrum yarn testnet-up",
-    "testnet-up:optimistic": "NETWORK_ID=optimistic yarn testnet-up",
     "testnet-up:gnosis": "NETWORK_ID=gnosis yarn testnet-up",
     "testnet-up:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/update.js",
-    
+
     "deploy": "yarn chain && hardhat run scripts/mainnets/deploy-upgradable.js",
     "deploy:eth": "HARDHAT_NETWORK=eth yarn deploy",
     "deploy:bnb": "HARDHAT_NETWORK=bnb yarn deploy",
-    "deploy:avax": "HARDHAT_NETWORK=avax yarn deploy",
     "deploy:poly": "HARDHAT_NETWORK=polygon yarn deploy",
+    "deploy:avax": "HARDHAT_NETWORK=avax yarn deploy",
     "deploy:ftm": "HARDHAT_NETWORK=ftm yarn deploy",
-    "deploy:cfx": "HARDHAT_NETWORK=cfx yarn deploy",
+    "deploy:arb": "HARDHAT_NETWORK=arb yarn deploy",
+    "deploy:opt": "HARDHAT_NETWORK=opt yarn deploy",
+    "deploy:one": "HARDHAT_NETWORK=one yarn deploy",
     "deploy:aurora": "HARDHAT_NETWORK=aurora yarn deploy",
+    "deploy:cfx": "HARDHAT_NETWORK=cfx yarn deploy",
     "deploy:evmos": "HARDHAT_NETWORK=evmos yarn deploy",
-    "deploy:arbitrum": "HARDHAT_NETWORK=arbitrum yarn deploy",
-    "deploy:gnosis": "HARDHAT_NETWORK=gnosis yarn deploy",
-    "deploy:optimistic": "HARDHAT_NETWORK=optimistic yarn deploy",
     "deploy:tron": "NETWORK_ID=tron yarn chain && hardhat run scripts/tron/deploy.js",
-    
+
     "up": "yarn chain && hardhat run scripts/mainnets/upgrade.js",
     "up:eth": "HARDHAT_NETWORK=eth yarn up",
     "up:bnb-18": "HARDHAT_NETWORK=bnb yarn up",
-    "up:avax": "HARDHAT_NETWORK=avax yarn up",
     "up:poly": "HARDHAT_NETWORK=polygon yarn up",
+    "up:avax": "HARDHAT_NETWORK=avax yarn up",
     "up:ftm": "HARDHAT_NETWORK=ftm yarn up",
+    "up:arb": "HARDHAT_NETWORK=arb yarn up",
+    "up:opt": "HARDHAT_NETWORK=opt yarn up",
+    "up:one": "HARDHAT_NETWORK=one yarn up",
     "up:cfx-18": "HARDHAT_NETWORK=cfx yarn up",
     "up:aurora": "HARDHAT_NETWORK=aurora yarn up",
     "up:evmos": "HARDHAT_NETWORK=evmos yarn up",
-    "up:arbitrum": "HARDHAT_NETWORK=arbitrum yarn up",
-    "up:gnosis": "HARDHAT_NETWORK=gnosis yarn up",
-    "up:optimistic": "HARDHAT_NETWORK=optimistic yarn up",
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
 
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
     "token:aurora": "HARDHAT_NETWORK=aurora yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
     "token:evmos": "HARDHAT_NETWORK=evmos yarn token",
-    
+
     "deposit": "hardhat run scripts/mainnets/deposit.js",
     "deposit:eth": "HARDHAT_NETWORK=eth yarn deposit",
-    "deposit:avax": "HARDHAT_NETWORK=avax yarn deposit",
-    "deposit:poly": "HARDHAT_NETWORK=polygon yarn deposit",
-    "deposit:ftm": "HARDHAT_NETWORK=ftm yarn deposit",
     "deposit:bnb": "HARDHAT_NETWORK=bnb yarn deposit",
-    "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
+    "deposit:poly": "HARDHAT_NETWORK=polygon yarn deposit",
+    "deposit:avax": "HARDHAT_NETWORK=avax yarn deposit",
+    "deposit:ftm": "HARDHAT_NETWORK=ftm yarn deposit",
+    "deposit:arb": "HARDHAT_NETWORK=arb yarn deposit",
+    "deposit:opt": "HARDHAT_NETWORK=opt yarn deposit",
+    "deposit:one": "HARDHAT_NETWORK=one yarn deposit",
     "deposit:aurora": "HARDHAT_NETWORK=aurora yarn deposit",
+    "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
     "deposit:evmos": "HARDHAT_NETWORK=evmos yarn deposit",
     "deposit:tron": "hardhat run scripts/tron/deposit.js"
   },
