--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "deploy:aurora": "HARDHAT_NETWORK=aurora yarn deploy",
     "deploy:cfx": "HARDHAT_NETWORK=cfx yarn deploy",
     "deploy:evmos": "HARDHAT_NETWORK=evmos yarn deploy",
+    "deploy:movr": "HARDHAT_NETWORK=movr yarn deploy",
     "deploy:tron": "NETWORK_ID=tron yarn chain && hardhat run scripts/tron/deploy.js",
 
     "up": "yarn chain && hardhat run scripts/mainnets/upgrade.js",
@@ -85,10 +86,12 @@
     "up:cfx-18": "HARDHAT_NETWORK=cfx yarn up",
     "up:aurora": "HARDHAT_NETWORK=aurora yarn up",
     "up:evmos": "HARDHAT_NETWORK=evmos yarn up",
+    "up:movr": "HARDHAT_NETWORK=movr yarn up",
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
 
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
     "token:aurora": "HARDHAT_NETWORK=aurora yarn token",
+    "token:arb": "HARDHAT_NETWORK=arb yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
     "token:evmos": "HARDHAT_NETWORK=evmos yarn token",
 
@@ -104,12 +107,13 @@
     "deposit:aurora": "HARDHAT_NETWORK=aurora yarn deposit",
     "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
     "deposit:evmos": "HARDHAT_NETWORK=evmos yarn deposit",
+    "deposit:movr": "HARDHAT_NETWORK=movr yarn deposit",
     "deposit:tron": "hardhat run scripts/tron/deposit.js"
   },
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.9.0",
     "@mesonfi/contract-types": "^0.9.0",
-    "@mesonfi/presets": "^0.9.2",
+    "@mesonfi/presets": "^0.9.3",
     "@mesonfi/sdk": "^0.9.3",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
