--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meson-contracts-solidity",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "main": "index.js",
   "private": true,
   "engines": {
@@ -72,6 +72,7 @@
     "deploy:cfx": "HARDHAT_NETWORK=cfx yarn deploy",
     "deploy:evmos": "HARDHAT_NETWORK=evmos yarn deploy",
     "deploy:movr": "HARDHAT_NETWORK=movr yarn deploy",
+    "deploy:beam": "HARDHAT_NETWORK=beam yarn deploy",
     "deploy:tron": "NETWORK_ID=tron yarn chain && hardhat run scripts/tron/deploy.js",
 
     "up": "yarn chain && hardhat run scripts/mainnets/upgrade.js",
@@ -87,6 +88,7 @@
     "up:aurora": "HARDHAT_NETWORK=aurora yarn up",
     "up:evmos": "HARDHAT_NETWORK=evmos yarn up",
     "up:movr": "HARDHAT_NETWORK=movr yarn up",
+    "up:beam": "HARDHAT_NETWORK=beam yarn up",
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
 
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
@@ -108,12 +110,13 @@
     "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
     "deposit:evmos": "HARDHAT_NETWORK=evmos yarn deposit",
     "deposit:movr": "HARDHAT_NETWORK=movr yarn deposit",
+    "deposit:beam": "HARDHAT_NETWORK=beam yarn deposit",
     "deposit:tron": "hardhat run scripts/tron/deposit.js"
   },
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.10.0",
     "@mesonfi/contract-types": "^0.10.0",
-    "@mesonfi/presets": "^0.10.2",
+    "@mesonfi/presets": "^0.10.3",
     "@mesonfi/sdk": "^0.10.0",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
