--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
 
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
-    "token:aurora": "HARDHAT_NETWORK=aurora yarn token",
+    "token:avax": "HARDHAT_NETWORK=avax yarn token",
     "token:arb": "HARDHAT_NETWORK=arb yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
     "token:evmos": "HARDHAT_NETWORK=evmos yarn token",
@@ -116,7 +116,7 @@
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.10.0",
     "@mesonfi/contract-types": "^0.10.0",
-    "@mesonfi/presets": "^0.10.6",
+    "@mesonfi/presets": "^0.10.7",
     "@mesonfi/sdk": "^0.10.2",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
