--- a/package.json
+++ b/package.json
@@ -91,27 +91,27 @@
     "up:beam": "HARDHAT_NETWORK=beam yarn up",
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
 
+    "pool": "hardhat run scripts/mainnets/pool.js",
+    "pool:eth": "HARDHAT_NETWORK=eth yarn pool",
+    "pool:bnb": "HARDHAT_NETWORK=bnb yarn pool",
+    "pool:poly": "HARDHAT_NETWORK=polygon yarn pool",
+    "pool:avax": "HARDHAT_NETWORK=avax yarn pool",
+    "pool:ftm": "HARDHAT_NETWORK=ftm yarn pool",
+    "pool:arb": "HARDHAT_NETWORK=arb yarn pool",
+    "pool:opt": "HARDHAT_NETWORK=opt yarn pool",
+    "pool:one": "HARDHAT_NETWORK=one yarn pool",
+    "pool:aurora": "HARDHAT_NETWORK=aurora yarn pool",
+    "pool:cfx": "HARDHAT_NETWORK=cfx yarn pool",
+    "pool:evmos": "HARDHAT_NETWORK=evmos yarn pool",
+    "pool:movr": "HARDHAT_NETWORK=movr yarn pool",
+    "pool:beam": "HARDHAT_NETWORK=beam yarn pool",
+    "pool:tron": "hardhat run scripts/tron/pool.js",
+
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
     "token:avax": "HARDHAT_NETWORK=avax yarn token",
     "token:arb": "HARDHAT_NETWORK=arb yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
-    "token:evmos": "HARDHAT_NETWORK=evmos yarn token",
-
-    "deposit": "hardhat run scripts/mainnets/deposit.js",
-    "deposit:eth": "HARDHAT_NETWORK=eth yarn deposit",
-    "deposit:bnb": "HARDHAT_NETWORK=bnb yarn deposit",
-    "deposit:poly": "HARDHAT_NETWORK=polygon yarn deposit",
-    "deposit:avax": "HARDHAT_NETWORK=avax yarn deposit",
-    "deposit:ftm": "HARDHAT_NETWORK=ftm yarn deposit",
-    "deposit:arb": "HARDHAT_NETWORK=arb yarn deposit",
-    "deposit:opt": "HARDHAT_NETWORK=opt yarn deposit",
-    "deposit:one": "HARDHAT_NETWORK=one yarn deposit",
-    "deposit:aurora": "HARDHAT_NETWORK=aurora yarn deposit",
-    "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
-    "deposit:evmos": "HARDHAT_NETWORK=evmos yarn deposit",
-    "deposit:movr": "HARDHAT_NETWORK=movr yarn deposit",
-    "deposit:beam": "HARDHAT_NETWORK=beam yarn deposit",
-    "deposit:tron": "hardhat run scripts/tron/deposit.js"
+    "token:evmos": "HARDHAT_NETWORK=evmos yarn token"
   },
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.11.0",
