udpate some code comments (#59)
* udpate some code comments

* update readme

* Update README.md

* update readme

* Update README.md

* Update MesonPools.sol

* finish some TODO

* update `addAuthorizedAddr` comment

* update comments

* add comments to MesonTokens

* update comments for fees

Co-authored-by: wyf-ACCEPT <define_wifi@163.com>

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "scripts": {
     "build": "hardhat compile --config hardhat.config.ts",
-    "build:packages": "yarn workspace @mesonfi/sdk build && yarn workspace @mesonfi/presets build",
-    "build:types": "TESTNET_MODE=true yarn chain:eth && yarn cleanbuild",
     "postbuild": "cp artifacts/contracts/Meson.sol/Meson.json packages/contract-abis/abis/Meson.json && cp artifacts/contracts/test/MockToken.sol/MockToken.json packages/contract-abis/abis/ERC20.json",
     "cleanbuild": "hardhat clean && yarn build",
-    "docgen": "solidity-docgen --solc-module solc -t ./templates",
+    "build:packages": "yarn workspace @mesonfi/sdk build && yarn workspace @mesonfi/presets build",
+    "build:types": "TESTNET_MODE=true yarn chain:eth && yarn cleanbuild",
     "test": "TESTNET_MODE=true NETWORK_ID=eth yarn chain && hardhat --network hardhat test",
+    "docgen": "solidity-docgen --solc-module solc -t ./templates",
     "estimate": "hardhat --network hardhat run scripts/estimate-gas.js",
-    "estimate2": "hardhat --network hardhat run scripts/estimate-gas-upgradable.js",
+    "estimate-upgradable": "hardhat --network hardhat run scripts/estimate-gas-upgradable.js",
 
     "chain": "node scripts/set-chain-config.js",
     "chain:local": "NETWORK_ID=local yarn chain",
@@ -91,27 +91,27 @@
     "up:beam": "HARDHAT_NETWORK=beam yarn up",
     "up:tron": "HARDHAT_NETWORK=tron yarn chain && hardhat run scripts/tron/update.js",
 
+    "pool": "hardhat run scripts/mainnets/pool.js",
+    "pool:eth": "HARDHAT_NETWORK=eth yarn pool",
+    "pool:bnb": "HARDHAT_NETWORK=bnb yarn pool",
+    "pool:poly": "HARDHAT_NETWORK=polygon yarn pool",
+    "pool:avax": "HARDHAT_NETWORK=avax yarn pool",
+    "pool:ftm": "HARDHAT_NETWORK=ftm yarn pool",
+    "pool:arb": "HARDHAT_NETWORK=arb yarn pool",
+    "pool:opt": "HARDHAT_NETWORK=opt yarn pool",
+    "pool:one": "HARDHAT_NETWORK=one yarn pool",
+    "pool:aurora": "HARDHAT_NETWORK=aurora yarn pool",
+    "pool:cfx": "HARDHAT_NETWORK=cfx yarn pool",
+    "pool:evmos": "HARDHAT_NETWORK=evmos yarn pool",
+    "pool:movr": "HARDHAT_NETWORK=movr yarn pool",
+    "pool:beam": "HARDHAT_NETWORK=beam yarn pool",
+    "pool:tron": "hardhat run scripts/tron/pool.js",
+
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
     "token:avax": "HARDHAT_NETWORK=avax yarn token",
     "token:arb": "HARDHAT_NETWORK=arb yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
-    "token:evmos": "HARDHAT_NETWORK=evmos yarn token",
-
-    "deposit": "hardhat run scripts/mainnets/deposit.js",
-    "deposit:eth": "HARDHAT_NETWORK=eth yarn deposit",
-    "deposit:bnb": "HARDHAT_NETWORK=bnb yarn deposit",
-    "deposit:poly": "HARDHAT_NETWORK=polygon yarn deposit",
-    "deposit:avax": "HARDHAT_NETWORK=avax yarn deposit",
-    "deposit:ftm": "HARDHAT_NETWORK=ftm yarn deposit",
-    "deposit:arb": "HARDHAT_NETWORK=arb yarn deposit",
-    "deposit:opt": "HARDHAT_NETWORK=opt yarn deposit",
-    "deposit:one": "HARDHAT_NETWORK=one yarn deposit",
-    "deposit:aurora": "HARDHAT_NETWORK=aurora yarn deposit",
-    "deposit:cfx": "HARDHAT_NETWORK=cfx yarn deposit",
-    "deposit:evmos": "HARDHAT_NETWORK=evmos yarn deposit",
-    "deposit:movr": "HARDHAT_NETWORK=movr yarn deposit",
-    "deposit:beam": "HARDHAT_NETWORK=beam yarn deposit",
-    "deposit:tron": "hardhat run scripts/tron/deposit.js"
+    "token:evmos": "HARDHAT_NETWORK=evmos yarn token"
   },
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.11.0",
