--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "0.11.0",
+  "version": "1.0.0-alpha.1",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -24,8 +24,8 @@
     "@ethersproject/logger": "^5.6.0",
     "@ethersproject/properties": "^5.6.0",
     "@ethersproject/providers": "^5.6.0",
-    "@mesonfi/contract-abis": "^0.11.0",
-    "@mesonfi/sdk": "^0.11.0",
+    "@mesonfi/contract-abis": "^1.0.0-alpha.1",
+    "@mesonfi/sdk": "^1.0.0-alpha.1",
     "tronweb": "^4.1.0"
   },
   "devDependencies": {
