--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meson-contracts-solidity",
-  "version": "0.11.0",
+  "version": "1.0.0-alpha.1",
   "main": "index.js",
   "private": true,
   "engines": {
@@ -114,10 +114,10 @@
     "token:evmos": "HARDHAT_NETWORK=evmos yarn token"
   },
   "devDependencies": {
-    "@mesonfi/contract-abis": "^0.11.0",
-    "@mesonfi/contract-types": "^0.11.0",
-    "@mesonfi/presets": "^0.11.0",
-    "@mesonfi/sdk": "^0.11.2",
+    "@mesonfi/contract-abis": "^1.0.0-alpha.1",
+    "@mesonfi/contract-types": "^1.0.0-alpha.1",
+    "@mesonfi/presets": "^1.0.0-alpha.1",
+    "@mesonfi/sdk": "^1.0.0-alpha.1",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.1",
