--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "token:avax": "HARDHAT_NETWORK=avax yarn token",
     "token:arb": "HARDHAT_NETWORK=arb yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
+    "token:aurora": "HARDHAT_NETWORK=aurora yarn token",
     "token:evmos": "HARDHAT_NETWORK=evmos yarn token",
 
     "deposit": "hardhat run scripts/mainnets/deposit.js",
@@ -116,7 +117,7 @@
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.11.0",
     "@mesonfi/contract-types": "^0.11.0",
-    "@mesonfi/presets": "^0.11.0",
+    "@mesonfi/presets": "^0.11.1",
     "@mesonfi/sdk": "^0.11.2",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
