add "testnet-deposit" command

--- a/package.json
+++ b/package.json
@@ -62,6 +62,22 @@
     "testnet-up:eos": "NETWORK_ID=eos yarn testnet-up", 
     "testnet-up:tron": "NETWORK_ID=tron TESTNET_MODE=true yarn chain && hardhat run scripts/tron/update.js",
 
+    "testnet-deposit": "TESTNET_MODE=true yarn chain && hardhat run scripts/testnets/deposit.js",
+    "testnet-deposit:eth": "NETWORK_ID=eth yarn deposit",
+    "testnet-deposit:bnb": "NETWORK_ID=bnb yarn deposit",
+    "testnet-deposit:poly": "NETWORK_ID=polygon yarn deposit",
+    "testnet-deposit:avax": "NETWORK_ID=avax yarn deposit",
+    "testnet-deposit:ftm": "NETWORK_ID=ftm yarn deposit",
+    "testnet-deposit:arb": "NETWORK_ID=arb yarn deposit",
+    "testnet-deposit:opt": "NETWORK_ID=opt yarn deposit",
+    "testnet-deposit:one": "NETWORK_ID=one yarn deposit",
+    "testnet-deposit:aurora": "NETWORK_ID=aurora yarn deposit",
+    "testnet-deposit:cfx": "NETWORK_ID=cfx yarn deposit",
+    "testnet-deposit:evmos": "NETWORK_ID=evmos yarn deposit",
+    "testnet-deposit:movr": "NETWORK_ID=movr yarn deposit",
+    "testnet-deposit:beam": "NETWORK_ID=beam yarn deposit",
+    "testnet-deposit:eos": "NETWORK_ID=eos yarn deposit",
+
     "deploy": "yarn chain && hardhat run scripts/mainnets/deploy-upgradable.js",
     "deploy:eth": "HARDHAT_NETWORK=eth yarn deploy",
     "deploy:bnb": "HARDHAT_NETWORK=bnb yarn deploy",
