--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "token": "yarn chain && hardhat run scripts/mainnets/token.js",
     "token:avax": "HARDHAT_NETWORK=avax yarn token",
     "token:arb": "HARDHAT_NETWORK=arb yarn token",
+    "token:opt": "HARDHAT_NETWORK=opt yarn token",
     "token:cfx": "HARDHAT_NETWORK=cfx yarn token",
     "token:aurora": "HARDHAT_NETWORK=aurora yarn token",
     "token:evmos": "HARDHAT_NETWORK=evmos yarn token",
@@ -123,7 +124,7 @@
   "devDependencies": {
     "@mesonfi/contract-abis": "^0.11.0",
     "@mesonfi/contract-types": "^0.11.0",
-    "@mesonfi/presets": "^0.11.2",
+    "@mesonfi/presets": "^0.11.3",
     "@mesonfi/sdk": "^0.11.2",
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
